# python-opsi

./: .coveragerc  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  70_dynamic_depot.conf  README.md  create_source.sh  opsi-dev-tool.yml  publish_on_uib_pypi.sh  pylintrc  pyproject.toml  requirements-dev.txt  requirements-qa.txt  requirements-readthedocs.txt  requirements.txt  run_qa.sh  run_tests.sh  setup.cfg  setup.py  unit2.py
OPSI/: Application.py  Config.py  Exceptions.py  Logger.py  Object.py  SharedAlgorithm.py  Tools.py  Types.py  UI.py  __init__.py  __init__.py.orig  setup.py
OPSI/Backend/: Backend.py  BackendManager.py  BackendProcess.py  Cache.py  DHCPD.py  Depotserver.py  File.py  File31.py  HostControl.py  HostControlSafe.py  JSONRPC.py  JSONRPC2.py  LDAP.py  Multiplex.py  MySQL.py  MySQLOld.py  Object.py  Objects.py  OpsiPXEConfd.py  Process.py  Replicator.py  SQL.py  SQLite.py  _Async.py  __init__.py
OPSI/Service/: JsonRpc.py  Process.py  Resource.py  Session.py  Worker.py  __init__.py
OPSI/System/: Darwin.py  Linux.py  Posix.py  Windows.py  __init__.py
OPSI/Util/: AMP.py  Collections.py  Config.py  Configuration.py  Debug.py  HTTP.py  LicenseReader.py  Log.py  Message.py  MessageBus.py  Path.py  Ping.py  Product.py  Repository.py  Sync.py  Thread.py  ThreadPool.py  Twisted.py  WIM.py  WindowsDrivers.py  __init__.py  _functools.py  amp.py
OPSI/ldaptor/: U32.py  checkers.py  config.py  delta.py  dns.py  entry.py  entryhelpers.py  inmemory.py  ldapfilter.py  ldiftree.py  md4.py  numberalloc.py  schema.py  testutil.py  usage.py  weave.py
OPSI/tests/: AllTests.py  README  __init__.py
OPSI/unittest2/: __init__.py  __main__.py  case.py  compatibility.py  loader.py  main.py  suite.py  util.py
OPSI/web2/: __init__.py  _version.py  compat.py  dirlist.py  error.py  fileupload.py  http.py  http_headers.py  iweb.py  log.py  metafd.py  proxy.py  resource.py  responsecode.py  server.py  static.py  stream.py  tap.py  twcgi.py  twscgi.py  vhost.py  wsgi.py  (+1 more)
data/: opsi-standalone.schema  opsi.conf  opsi.schema  server_commands.conf  server_commands_custom.conf  server_commands_default.conf
debian/: changelog  conffiles  control  copyright  dirs  python-opsi.links  python-opsi.postinst  python-opsi.postrm  python-opsi.preinst  python-opsi.prerm  python2.3-opsi.postinst  python2.3-opsi.postrm  python2.3-opsi.prerm  python2.3-opsi.templates  python2.4-opsi.postinst  python2.4-opsi.prerm  python3-opsi.postinst  python3-opsi.preinst  rules
doc/: backend_doc_de.txt  conf.py  objects.dot
files/: opsi-standalone.schema  opsi.conf  opsi.schema
gettext/: README.TXT  opsi_system_de.po  opsi_system_fr.po  opsi_ui_de.po  opsi_ui_fr.po  python-opsi.pot  python-opsi_da.po  python-opsi_de.po  python-opsi_en.po  python-opsi_es.po  python-opsi_fr.po  python-opsi_it.po  python-opsi_nl.po  python-opsi_pl.po  python-opsi_ru.po  update_po.sh
manual_tests/: test_backend_conversion.py  test_repository.py
opsicommon/: __init__.py  contextlogger.py  exceptions.py  license.py  logging.py  loggingconstants.py  objects.py  types.py
rpm/: build_rpm.sh  create_source.sh  python-opsi.spec  python3-opsi.spec
test/: backend.py  backend_base_test.py  backend_test.py  ldap-upgrade.py  test_acl.py  test_backend_manager.py  test_base_lib.py  test_convert_backend.py  test_dhcpd_backend.py  test_file_backend.py  test_hostcontrol_backend.py  test_jsonrpc_backend.py  test_ldap_backend.py  test_mysql_backend.py
tests/: AllTests.py  README  __init__.py  conftest.py  helpers.py  opsifixtures.py  test_acl.py  test_application.py  test_backend_async.py  test_backend_backend.py  test_backend_backenddispatcher.py  test_backend_backendmanager.py  test_backend_configdatabackend.py  test_backend_dchpd.py  test_backend_depotserver.py  test_backend_dhcpd.py  test_backend_extend_d_10_opsi.py  test_backend_extend_d_10_wim.py  test_backend_extend_d_20_easy.py  test_backend_extend_d_20_legacy.py  test_backend_extend_d_30_kiosk.py  test_backend_extend_d_30_sshcommands.py  test_backend_extend_d_40_admin_tasks.py  test_backend_extend_d_40_group_actions.py  test_backend_extend_d_45_deprecation.py  test_backend_extend_d_70_dynamic_depot.py  test_backend_extend_d_70_wan.py  test_backend_extendedconfigdatabackend.py  test_backend_file.py  test_backend_hostcontrol.py  test_backend_jsonrpc.py  test_backend_methods.py  test_backend_modificationtracker.py  test_backend_multithreading.py  test_backend_mysql.py  test_backend_opsipxeconfd.py  test_backend_replicator.py  test_backend_sql.py  test_backend_sqlite.py  test_base_lib.py  (+57 more)
web2/: __init__.py  plugin.py  responsecode.py  static.py  xmlrpc.py
(+708 files in other folders)
