[tool.poetry]
name = "python-opsi"
version = "4.3.0.4"
description = "The opsi python library"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
maintainers = ["uib GmbH <info@uib.de>"]
authors = ["uib GmbH <info@uib.de>"]
packages = [
    { include = "OPSI" }
]
include = [
    "python-opsi_data/**/*"
]

[[tool.poetry.source]]
name = "uibpypi"
url = "https://pypi.uib.gmbh/simple"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
attrs = "^22.1"
colorlog = "^6.6"
distro = {platform = "linux", version = "^1.5"}
ldap3 = "^2.9"
lz4 = "^4.0"
msgpack = "^1.0"
mysqlclient = {platform = "linux", version = "^2.1"}
pefile = "^2022.5"
pexpect = "^4.8"
psutil = "^5.8"
pyasn1 = "^0.4"
pycryptodome = "^3.10"
pyopenssl = "^23.0"
python-opsi-common = "^4.3.0.2"
python-pam = "^2.0"
pywin32 = {platform = "win32", version = "^303"}
ruyaml = "^0.91"
service-identity = "^21.1"
sqlalchemy = ">=1.4,<2.0"
twisted = {extras = ["tls"], version = "^22.1"}
wmi = {platform = "win32", version = "^1.5"}
packaging = "^23.0"
tomlkit = "^0.11.6"

[tool.poetry.dev-dependencies]
flake8 = "^6.0"
mock = "^5.0"
pylint = "^2.7"
pytest = "^7.0"
pytest-asyncio = "^0.20"
pytest-cov = "^4.0"
tan = "^22.2"
isort = "^5.10.1"

[tool.black]
line-length = 140
target-version = ['py39', 'py310']
use-tabs = true

[tool.isort]
profile = "black"
indent = "\t"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
