[tool.poetry]
name = "python-opsi"
version = "4.3.0.25"
description = "The opsi python library"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
maintainers = ["uib GmbH <info@uib.de>"]
authors = ["uib GmbH <info@uib.de>"]
packages = [
    { include = "OPSI" }
]
include = [
    "python-opsi_data/**/*"
]

[[tool.poetry.source]]
name = "uibpypi"
url = "https://pypi.uib.gmbh/simple"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
attrs = "^23.1"
colorlog = "^6.6"
distro = {platform = "linux", version = "^1.5"}
ldap3 = "^2.9"
lz4 = "^4.0"
msgpack = "^1.0"
pefile = "^2023.2"
pexpect = "^4.8"
psutil = "^5.8"
pyasn1 = "^0.4"
pycryptodome = "^3.10"
pyopenssl = "^23.0"
python-opsi-common = "^4.3.0.60"
python-pam = "^2.0"
pywin32 = {platform = "win32", version = ">=303"}
ruyaml = "^0.91"
service-identity = "^23.1"
sqlalchemy = ">=1.4,<2.0"
twisted = {extras = ["tls"], version = "^22.1"}
wmi = {platform = "win32", version = "^1.5"}
packaging = "^23.0"
tomlkit = "^0.11.6"
pyzsync = "^1.2"

[tool.poetry.dev-dependencies]
flake8 = "^6.0"
mock = "^5.0"
pylint = "^2.7"
pytest = "^7.0"
pytest-asyncio = "^0.21"
pytest-cov = "^4.0"
tan = "^23.3"
isort = "^5.10.1"

[tool.black]
line-length = 140
target-version = ['py39', 'py310']
use-tabs = true

[tool.isort]
profile = "black"
indent = "\t"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
