[build-system]
requires = [ "poetry>=0.12",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "python-opsi"
version = "4.3.3.3"
description = "The opsi python library"
homepage = "https://www.opsi.org"
license = "AGPL-3.0"
maintainers = [ "uib GmbH <info@uib.de>",]
authors = [ "uib GmbH <info@uib.de>",]
include = [ "python-opsi_data/**/*",]
[[tool.poetry.packages]]
include = "OPSI"

[[tool.poetry.source]]
name = "uibpypi"
url = "https://pypi.uib.gmbh/simple"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
six = "^1.16.0"

[tool.black]
line-length = 140
target-version = [ "py39", "py310",]
use-tabs = true

[tool.isort]
profile = "black"
indent = "\t"

[tool.ruff]
line-length = 140
ignore = [ "F401", "E402", "F403", "F405",]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
attrs = "^23.1"
colorlog = "^6.6"
ldap3 = "^2.9"
lz4 = "^4.0"
msgpack = "^1.0"
pefile = "^2023.2"
pexpect = "^4.8"
psutil = "^5.8"
pyasn1 = "^0.5"
pycryptodome = "^3.10"
python-opsi-common = ">=4.3.3,<4.4"
python-pam = "^2.0"
ruyaml = "^0.91"
service-identity = "^24.1"
sqlalchemy = ">=1.4,<2.0"
packaging = "^23.0"
tomlkit = "^0.12"
pyzsync = "^1.2"

[tool.poetry.dev-dependencies]
mock = "^5.0"
pylint = "^3.0"
pytest = "^7.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.0"
ruff = "^0.1"

[tool.ruff.format]
indent-style = "tab"

[tool.poetry.dependencies.distro]
platform = "linux"
version = "^1.5"

[tool.poetry.dependencies.pywin32]
platform = "win32"
version = ">=303"

[tool.poetry.dependencies.wmi]
platform = "win32"
version = "^1.5"
